--- a/TakeBackChatter/TakeBackChatter-Info.plist
+++ b/TakeBackChatter/TakeBackChatter-Info.plist
@@ -30,5 +30,16 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>Salesforce.com authentication complete</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>compocketsoaptakebackchatter</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
