ignore more xcode cruft.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 .DS_Store
 DerivedData
+
+TakeBackChatter.xcodeproj/xcuserdata/simon.xcuserdatad/xcdebugger/
+TakeBackChatter.xcodeproj/project.xcworkspace/xcuserdata/
